# mp2-lab5-multistack

./: CMakeLists.txt
.github/workflows/: blank.yml
Example/: CMakeLists.txt  main.cpp
StackLib/: CMakeLists.txt  MultiStack.h  Stack.h
test/: CMakeLists.txt  test_tmultistack.cpp  test_tstack.cpp
